--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = datalad-annex::https://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/B05/pub_dataset?type=webdav&encryption=none&exporttree=yes&url={noquery}
 	datalad-id = 7411dec6-abc4-45a8-890d-0451af8c6297
 	datalad-url = webdavs://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/B05/pub_dataset
+[submodule "C01"]
+	path = C01
+	url = datalad-annex::https://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/C01/ProjectInfo2?type=webdav&encryption=none&exporttree=yes&url={noquery}
+	datalad-id = ef3daade-7873-4737-ad23-bff6eca284c9
+	datalad-url = webdavs://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/C01/ProjectInfo2
