--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,8 @@
 	url = datalad-annex::https://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/C05/pub_dataset?type=webdav&encryption=none&exporttree=yes&url={noquery}
 	datalad-id = 441ef45f-c525-468e-aeb8-5cf3b7113b16
 	datalad-url = webdavs://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/C05/pub_dataset
+[submodule "Z03"]
+	path = Z03
+	url = datalad-annex::https://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/Z03/pub_dataset?type=webdav&encryption=none&exporttree=yes&url={noquery}
+	datalad-id = 87a777cc-eae0-4446-9178-4440a4eca038
+	datalad-url = webdavs://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/Z03/pub_dataset
