--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,8 @@
 	url = datalad-annex::https://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/B04?type=webdav&encryption=none&exporttree=yes&url={noquery}
 	datalad-id = 972860f9-75b9-4ecc-b546-99e1d6aad5f9
 	datalad-url = webdavs://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/B04
+[submodule "A02"]
+	path = A02
+	url = datalad-annex::https://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/A02/pub-dataset?type=webdav&encryption=none&exporttree=yes&url={noquery}
+	datalad-id = 5a11d594-243e-4ca3-819b-54d10c8d6b3f
+	datalad-url = webdavs://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/A02/pub-dataset
