--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,7 @@
 	url = datalad-annex::https://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/A02/pub-dataset?type=webdav&encryption=none&exporttree=yes&url={noquery}
 	datalad-id = 5a11d594-243e-4ca3-819b-54d10c8d6b3f
 	datalad-url = webdavs://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/A02/pub-dataset
+[submodule "C06"]
+	path = C06
+	url = datalad-annex::https://fz-juelich.sciebo.de/remote.php/dav/files/m.szczepanik%40fz-juelich.de/Projects/C06/pub-dataset?type=webdav&encryption=none&exporttree=yes&url={noquery}
+	datalad-id = bede4323-23cd-40b4-b243-1e8257989da0
