Fix name capitalization in studyminimeta

--- a/.studyminimeta.yaml
+++ b/.studyminimeta.yaml
@@ -180,7 +180,7 @@ person:
      last_name: van Eimeren
   veerle.visser-vandewalle@uk-koeln.de:
      given_name: Veerle
-     last_name: Visser-vandewalle
+     last_name: Visser-Vandewalle
   s.vossel@fz-juelich.de:
      given_name: Simone
      last_name: Vossel
